# GPR-Kijitorakov

./: .mxproject  ADF4351_settings.txt  CMakeLists.txt  ConnectionTest.mlx  FreeRTOSConfig.h  GPR-Kijitorakov.ioc  HumanRadar.m  LICENSE  PulseModel.mlx  README.md  Radar.m  STM32F407VETx_FLASH.ld  Trajectory.m
AndroidApp/: settings.gradle
AndroidApp/app/: build.gradle
AndroidApp/app/src/androidTest/java/com/example/plot/: ExampleInstrumentedTest.java
AndroidApp/app/src/debug/res/drawable-anydpi/: ic_alias.xml  ic_antenna.xml  ic_autoscale.xml  ic_compress.xml  ic_label.xml
AndroidApp/app/src/main/: AndroidManifest.xml
AndroidApp/app/src/main/res/drawable/: button_round.xml
AndroidApp/app/src/main/res/drawable-anydpi/: ic_chart.xml  ic_color.xml  ic_dash.xml  ic_grid.xml  ic_name.xml  ic_waterfall.xml
AndroidApp/app/src/main/res/layout/: activity_main.xml  activity_settings.xml  fragment_plot.xml  fragment_watefall.xml
AndroidApp/app/src/main/res/layout-land/: activity_main.xml
AndroidApp/app/src/main/res/menu/: menu_settings.xml
AndroidApp/app/src/main/res/values/: colors.xml  ic_button_settings_background.xml  strings.xml  themes.xml
AndroidApp/app/src/main/res/values-night/: themes.xml
AndroidApp/app/src/main/res/xml/: device_filter.xml  preferences.xml  preferences_antenna.xml  preferences_grid.xml  preferences_plot.xml  preferences_radar.xml  preferences_waterfall.xml
AndroidApp/gradle/wrapper/: gradle-wrapper.properties
Firmware/GPR_STM32F407/: .mxproject  GPR.ioc  GPR_Pinout.ioc
Firmware/GPR_STM32F407/Inc/: AD8302.h  AD9910.h  ADF4351.h  ILI9341.h  W25Q.h  XPT2046.h  functions.h  globals.h  mathematics.h  usbd_cdc_if.h  usbd_conf.h  windows.h
Firmware/GPR_STM32F407/MDK-ARM/: GPR.uvguix.Kozurofu  GPR.uvoptx  GPR.uvprojx  JLinkLog.txt  VCO.c  VCO.h  gui.c  gui.h  main_app.c
Firmware/GPR_STM32F407/MDK-ARM/RTE/LVGL/: lv_conf_cmsis.h
Firmware/GPR_STM32F407/MDK-ARM/RTE/RTOS/: FreeRTOSConfig.h
Firmware/GPR_STM32F407/MDK-ARM/RTE/_GPR/: Pre_Include_Global.h  RTE_Components.h
Firmware/GPR_STM32F407/Src/: AD8302.c  AD9910.c  ADF4351.c  ILI9341.c  W25Q.c  XPT2046.c  functions.c  globals.c  main.c  mathematics.c  stm32f4xx_it.c  usbd_cdc_if.c  usbd_conf.c  windows.c
Gpr/: CMakeLists.txt  Gpr.cpp  Gpr.h
Src/: main.c
cmake/stm32cubemx/: CMakeLists.txt
(+28 files in other folders)
